# AoC

./: .gitignore  CMakeLists.txt  Makefile  README.md  build-linux.sh  build-windows.bat  build-windows.sh  build.sh  day1.asm  day11.c  day12.c  day13.c  day14.c  day15.c  day16.c  day17-old.c  day5.c  day7.c  day8.c  day9.c  kernel32.def  main.c  run.sh  scratch.c
include/: Stacktrace.h  Timer.h  all_days.h
inputs/dummy/: input21.txt
inputs/frisk/: input19.txt
res/: kernel32.lib
src/: Stacktrace.c  Timer.c  day1.asm  day10.c  day12.c  day13.c  day14-old.c  day14.c  day16.c  day17.c  day18.c  day19.c  day2.asm  day2.c  day22.c  day3.asm  day3.c  day4.c  day7.c  day8.c  day9.c  defines.inc  kernel32.def  main.asm  main.c  scratch.asm  utils.asm  utils.asm.cpy  utils.inc
src/days/: day1.asm  day1.c  day11.c  day12.c  day15.c  day17.c  day18.c  day19.c  day2.asm  day20.c  day21.c  day22.c  day3.asm  day3.c  day4.asm  day5.c  day6.c  day7.c  day9.c
src/extra/: day17_extra.c
src/os/: linux.asm  linux.inc  os_export.inc  windows.asm  windows.inc
tasks/: day1.md  day2.md  day3.md  day4.md
test/: a.out  scratch.c
